# augment-options-research-v2

./: .env.example  .gitignore  .mc.env  .mc.env.example  HEARTBEAT.md  LICENSE  Makefile  README.md  SPY_FREE_BRIEF.md  package.json  streamlit_app.py  test_1.py  turbo.json
agent/: USER.md  (+1 more)
project/: HEARTBEAT.md  pyproject.toml  requirements.txt
project/.learnings/: ERRORS.md  LEARNINGS.md
project/docs/: mc_command_contract.md
project/experiments/: chain_snapshot_with_returns.json  trades.csv
project/kb/concepts/: change_proposal_schema.json
project/kb/experiments/: candidate-weights-cp-weights-20260223-213026.json  framework-oos-20260223-204007.json  (+836 more)
project/proposals/: cp-20260223-201955.json  cp-weights-20260223-204007.md  cp-weights-20260223-213026.json
project/scripts/: ak_admin.py  ak_regime_harness.py  heartbeat_integrity_check.py  list_tickets.sh  mc_notify_if_changed.py  mc_outcome_report.py  spy_free_brief.py  stack_phase3_arbitration_demo.py
project/snapshots/: heartbeat_metrics.json  mc_last_state.json  mc_outcomes.jsonl  mc_runs.jsonl  spy_mc_snapshot_20260224.json
project/tests/: test_mc_notify_if_changed.py  test_options_mc.py  test_options_mc_dq_fail_dedupe_circuit_breaker.py  test_options_mc_provenance_contract.py  test_options_mc_realized_vol_feed_guard.py  test_promotion.py  test_stack_phase3_longport_optional_upgrade.py  test_ticket_phase_guard.py  test_unify_riskcap_estimator_mc_brief.py
services/research-engine/: .gitignore  Makefile  SPY_FREE_BRIEF.md  book_notes_option_traders_guide.md  pyproject.toml  requirements.txt
(+994 files in other folders)
