[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ak_system"
version = "0.1.0"
description = "Autonomous knowledge + options framework"
requires-python = ">=3.9"
dependencies = [
    "numpy==2.0.2",
    "scipy==1.15.3",
    "fastapi>=0.116.0",
    "uvicorn>=0.35.0",
    "httpx>=0.28.1",
    "pydantic>=2.11.0",
    "redis>=6.4.0",
    "asyncpg>=0.30.0",
    "celery>=5.5.3",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
